[package]
name = "lunatic-registry-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
wasmtime = "^0.36"
hash-map-id = { version = "^0.1", path = "../hash-map-id" }
lunatic-process = { version = "0.1", path = "../lunatic-process" }
lunatic-process-api = { version = "0.1", path = "../lunatic-process-api" }
lunatic-common-api = { version = "0.1", path = "../lunatic-common-api" }