[package]
name = "lunatic-registry-api"
version = "0.10.0"
edition = "2021"
description = "Lunatic host functions for registering named processes."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
wasmtime = "^0.40"
hash-map-id = { version = "^0.10", path = "../hash-map-id" }
lunatic-process = { version = "^0.10", path = "../lunatic-process" }
lunatic-process-api = { version = "^0.10", path = "../lunatic-process-api" }
lunatic-common-api = { version = "^0.10", path = "../lunatic-common-api" }