[package]
name = "lunatic-registry-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for registering named processes."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

[features]
metrics = ["dep:metrics"]

[dependencies]
lunatic-common-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-process-api = { workspace = true }

anyhow = { workspace = true }
metrics = { workspace = true, optional = true }
wasmtime = { workspace = true }
