[package]
edition = "2021"
name = "lunatic-sqlite-api"
version = "0.12.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = {version = "1.0", features = ["derive"]}

[target.'cfg(any(unix, windows))'.dependencies]
anyhow = "^1.0"
hash-map-id = {version = "^0.12", path = "../hash-map-id"}
lunatic-common-api = {version = "^0.12", path = "../lunatic-common-api"}
lunatic-error-api = {version = "^0.12", path = "../lunatic-error-api"}
lunatic-process = {version = "^0.12", path = "../lunatic-process"}
sqlite = {path = "../../../sqlite"}
wasmtime = {workspace = true}
