[package]
description = "Lunatic host functions for sqlite."
edition = "2021"
homepage = "https://lunatic.solutions"
license = "Apache-2.0/MIT"
name = "lunatic-sqlite-api"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-sqlite-api"
version = "0.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = {version = "1.0", features = ["derive"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = {workspace = true}
hash-map-id = {workspace = true}
lunatic-common-api = {workspace = true}
lunatic-error-api = {workspace = true}
lunatic-process = {workspace = true}
lunatic-process-api = {workspace = true}
sqlite = {version = "0.30.4", package = "sqlite-bindings-lunatic"}
wasmtime = {workspace = true}
