[package]
name = "lunatic-stdout-capture"
version = "0.12.0"
edition = "2021"
description = "Helper library for holding stdout streams of lunatic processes."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-registry-api"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wiggle = "2" # must reflect wasmtime controlled via Cargo.toml
wasi-common = "2" # managed by root Cargo.toml