[package]
name = "lunatic-timer-api"
version = "0.9.0"
edition = "2021"
description = "Lunatic host functions for working with timers."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-timer-api"
license = "Apache-2.0/MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
wasmtime = "^0.37"
async-std = { version = "^1.0", features = ["attributes", "unstable"] }
hash-map-id = { version = "^0.9", path = "../hash-map-id" }
lunatic-process = { version = "^0.9", path = "../lunatic-process" }
lunatic-process-api = { version = "^0.9", path = "../lunatic-process-api" }
lunatic-common-api = { version = "^0.9", path = "../lunatic-common-api" }
