[package]
name = "lunatic-timer-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for working with timers."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-timer-api"
license = "Apache-2.0/MIT"

[features]
metrics = ["dep:metrics"]

[dependencies]
hash-map-id = { workspace = true }
lunatic-common-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-process-api = { workspace = true }

anyhow = { workspace = true }
metrics = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time", "rt"] }
wasmtime = { workspace = true }
