[package]
name = "lunatic-trap-api"
version = "0.13.2"
edition = "2021"
description = "Lunatic host functions for catching traps."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0 OR MIT"

[dependencies]
lunatic-common-api = { workspace = true }

anyhow = { workspace = true }
wasmtime = { workspace = true }