[package]
name = "lunatic-version-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for getting Lunatic host version"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-version-api"
license = "Apache-2.0/MIT"

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
