[package]
name = "lunatic-wasi-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for WASI."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-wasi-api"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-map-id = { version = "0.12", path = "../hash-map-id" }
lunatic-common-api = { version = "0.12", path = "../lunatic-common-api" }
lunatic-process = { version = "0.12", path = "../lunatic-process" }
lunatic-stdout-capture = { version = "0.12", path = "../lunatic-stdout-capture" }

anyhow = "1.0"
tokio = { version = "1.20", features = ["macros"] }
wasmtime = "2" # managed by root Cargo.toml
wasmtime-wasi = "2" # managed by root Cargo.toml
