[package]
name = "lunatic-wasi-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for WASI."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-wasi-api"
license = "Apache-2.0/MIT"

[dependencies]
lunatic-common-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-stdout-capture = { workspace = true }

anyhow = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
