[package]
name = "lunatic"
version = "0.2.1"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"
description = "This library contains higher level wrappers for low level Lunatic syscalls."
license = "Apache-2.0/MIT"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
bincode= "1.3"