[package]
name = "uptown_funk_macro"
version = "0.1.2"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"
description = "Helper macro for the uptown_funk crate"
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features=["full", "extra-traits", "printing", "clone-impls", "fold"]}
quote = "1.0"
proc-macro2 = "1.0"
